@@ -2,7 +2,7 @@
 //
 // ImageLib Sources
 // Copyright (C) 2000-2009 by Denton Woods
-// Last modified: 02/09/2009
+// Last modified: 03/07/2009
 //
 // Filename: src-IL/src/il_raw.c
 //
@@ -110,9 +110,7 @@ ILboolean iLoadRawInternal()
 	else  // 4
 		iCurImage->Format = IL_RGBA;
 
-	ilFixImage();
-
-	return IL_TRUE;
+	return ilFixImage();
 }
 
 
