@@ -2,7 +2,7 @@
 //
 // ImageLib Sources
 // Copyright (C) 2000-2009 by Denton Woods
-// Last modified: 02/09/2009
+// Last modified: 03/07/2009
 //
 // Filename: src-IL/src/il_targa.c
 //
@@ -245,9 +245,7 @@ ILboolean iLoadTargaInternal()
 			break;
 	}
 	
-	ilFixImage();
-	
-	return bTarga;
+	return ilFixImage();
 }
 
 
